force-app/main/default/objects/ssot__CarePreauthorizationItem__dlm/fields/ssot__CarePreauthorizationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CarePreauthorizationId__c</fullName>
    <label>Care Preauthorization</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CarePreauthorizationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>