force-app/main/default/objects/ssot__CarePreauthorizationItem__dlm/fields/ssot__CarePreauthorizationNoteText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CarePreauthorizationNoteText__c</fullName>
    <label>Care Preauthorization Note</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CarePreauthorizationNoteText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>