force-app/main/default/objects/ssot__CarePreauthorizationItem__dlm/fields/ssot__Laterality__c.field-meta.xml
<CustomField>
    <fullName>ssot__Laterality__c</fullName>
    <label>Laterality</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Laterality</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>