force-app/main/default/objects/ssot__CarePreauthorizationItem__dlm/fields/ssot__PreauthitemSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreauthitemSequenceNumber__c</fullName>
    <label>PreauthitemSequence</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreauthitemSequenceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>