force-app/main/default/objects/ssot__CarePreauthorizationItem__dlm/fields/ssot__rel_1716726573342_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726573342_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePreauthorizationItem_CarePreauth_rel</label>
    <referenceTo>ssot__CarePreauthorization__dlm</referenceTo>
    <relationshipLabel>CarePreauthorizationItem_CarePreauth_rel</relationshipLabel>
    <relationshipName>rel_1716726573342_end</relationshipName>
    <type>Lookup</type>
</CustomField>