force-app/main/default/objects/ssot__CarePreauthorizationItem__dlm/fields/ssot__StartingServiceCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__StartingServiceCode__c</fullName>
    <label>Starting Service Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StartingServiceCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>